--- a/index.html
+++ b/index.html
@@ -1,4 +1,34 @@
-const adom = (function () {
+<!DOCTYPE html>
+<html><head><link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet"><style>body {
+  font-family: 'Source Code Pro', monospace;
+}
+
+h2 {
+  text-align: center;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+textarea {
+  width: 400px;
+  height: 500px;
+  border: none;
+  resize: none;
+  outline: none;
+  box-shadow: 0px 2px 10px 4px rgba(217,217,217,1);
+  font-size: 14px;
+  margin: 30px;
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+textarea:select {
+  outline: none;
+}</style><script>const adom = (function () {
 
 let fs = undefined
 let path = undefined
@@ -996,4 +1026,44 @@ if (typeof module !== 'undefined') {
   module.exports = adom
 } else {
   window.adom = adom
-}
+}</script><script>const initialContent = 
+`html [
+\thead [ ]
+\tbody [ ]
+]
+`
+
+document.addEventListener('DOMContentLoaded', function () {
+  const adomContent = document.querySelector('.adom')
+  const htmlContent = document.querySelector('.html')
+
+  function replaceContent () {
+    let content
+
+    try {
+      content = adom.render(adomContent.value, {
+        formatted: true
+      })
+    } catch (e) {
+      content = e
+    }
+
+    if (content) {
+      htmlContent.value = content
+    }
+  }
+
+  adomContent.value = initialContent
+
+  adomContent.addEventListener('keydown', function (e) {
+    if (e.keyCode === 9) {
+      e.preventDefault()
+      const s = this.selectionStart
+      this.value = this.value.substring(0,this.selectionStart) + '\t' + this.value.substring(this.selectionEnd)
+      this.selectionEnd = s + 1 
+    }
+  })
+
+  adomContent.addEventListener('keyup', replaceContent)
+  replaceContent()
+})</script></head><body><div><h2>a.dom playground</h2><div class="main"><textarea class="adom"></textarea><textarea class="html"></textarea></div></div></body></html>
