--- a/test.html
+++ b/test.html
@@ -105,6 +105,7 @@
       if (arr.length > 0) 
         el.hidden = false
       arr.forEach(function (i) {
+        console.log(it, i)
         let e = el.cloneNode(true)
         adom._state.push({ [it]: i })
         update_node(e, node)
@@ -139,7 +140,7 @@
         }
         let el = par.querySelector('[data-adom-id="' + n.ref + '"]')
         if (n.each) {
-          let elList = document.querySelectorAll('[data-adom-id="' + n.ref + '"]')
+          let elList = par.querySelectorAll('[data-adom-id="' + n.ref + '"]')
           for (let i = 1; i < elList.length; i++) {
     	elList[i].parentNode.removeChild(elList[i])
           }
