--- a/test.html
+++ b/test.html
@@ -1,20 +1,21 @@
+<!DOCTYPE html>
 <html>
-    <body>
+    <body data-adom-id="0">
         <h1>
             TODO APP
         </h1>
         <input id="item" />
         <br />
-        <button>
+        <button data-adom-id="1">
             ADD ITEM
         </button>
         <ul>
-            <li>
+            <li data-adom-id="2">
                 <ul>
-                    <li>
+                    <li data-adom-id="3">
                         hi, buy milk, matt
                     </li>
-                    <li>
+                    <li data-adom-id="3">
                         hi, buy milk, josephine
                     </li>
                 </ul>
@@ -23,12 +24,12 @@
                 </p>
                 <br />
             </li>
-            <li>
+            <li data-adom-id="2">
                 <ul>
-                    <li>
+                    <li data-adom-id="3">
                         hi, buy sausage, matt
                     </li>
-                    <li>
+                    <li data-adom-id="3">
                         hi, buy sausage, josephine
                     </li>
                 </ul>
@@ -37,12 +38,12 @@
                 </p>
                 <br />
             </li>
-            <li>
+            <li data-adom-id="2">
                 <ul>
-                    <li>
+                    <li data-adom-id="3">
                         hi, buy mounds bar, matt
                     </li>
-                    <li>
+                    <li data-adom-id="3">
                         hi, buy mounds bar, josephine
                     </li>
                 </ul>
