finished client side todo

--- a/test.html
+++ b/test.html
@@ -56,10 +56,13 @@
         <div data-adom-id="6">
             count: 3
         </div>
+        <span data-adom-id="7" hidden>
+            COUNT IS SEVEN
+        </span>
     </body>
     <script>
 (function () {
-const __adom_refs = [{"id":1,"children":[],"attributes":{"name":["items",0]},"textnodes":[]},{"id":2,"children":[],"attributes":[],"textnodes":[]},{"id":3,"children":[{"id":4,"children":[],"attributes":[],"textnodes":[]},{"id":5,"children":[],"attributes":{},"textnodes":[{"index":"1","chunks":[" here ",["i"]," "]}]}],"attributes":[],"textnodes":[]},{"id":6,"children":[],"attributes":{},"textnodes":[{"index":"1","chunks":[" count: ",["items","length"]," "]}]}]
+const __adom_refs = [{"id":1,"children":[],"name":"input","_if":{},"_each":{},"attributes":{"name":["items",0]},"textnodes":[]},{"id":2,"children":[],"attributes":[],"textnodes":[]},{"id":3,"children":[{"type":"push_props","scope":{"title":"hi"}},{"id":4,"children":[],"name":"li","_if":{},"_each":{"iterator":["p"],"list":["people"]},"attributes":{},"textnodes":[{"index":0,"chunks":[" ",["props","title"],", ",["i"],", ",["p","name"]," "]}]},{"type":"pop_props"},{"id":5,"children":[],"name":"p","_if":{},"_each":{},"attributes":{},"textnodes":[{"index":0,"chunks":[" here ",["i"]," "]}]},{"type":"push_props","scope":{"title":"hi"}},{"type":"pop_props"}],"name":"li","_if":{},"_each":{"iterator":["i"],"list":["items"]},"attributes":{},"textnodes":[]},{"id":6,"children":[],"name":"div","_if":{},"_each":{},"attributes":{},"textnodes":[{"index":0,"chunks":[" count: ",["items","length"]," "]}]},{"id":7,"children":[],"name":"span","_if":{"lhs":["items","length"],"rhs":7,"cmp":"eq"},"_each":{},"attributes":{},"textnodes":[]}]
 const __adom_state = [{"items":["buy milk","buy sausage","buy mounds bar"],"name":"matt","people":[{"name":"matt"},{"name":"josephine"}]}]
 const $ = __adom_state[0]
 
@@ -77,22 +80,127 @@ function $attach (e, sel, handler) {
   })
 }
 
-function __adom_each_ref (fn) {
-  function walk (children) {
-    children.forEach(function (node) {
-      fn(node)
-      if (node.children) {
-	walk(node.children)
-      }
-    })
+function __get_value(v) {
+  if (!Array.isArray(v)) return v
+  let idx = __adom_state.length - 1
+  let check = v[0]
+  while (__adom_state[idx][check] == null && idx > 0) {
+    idx--
   }
-  walk(__adom_refs)
+  v1 = __adom_state[idx]
+  v.forEach(function (i) {
+    v1 = v1[i]
+  })
+  return v1
+}
+
+function __evaluate_condition (condition) {
+  let lhs = __get_value(condition.lhs)
+  let rhs = __get_value(condition.rhs)
+  let cmp = condition.cmp
+
+  if (cmp === 'eq' && lhs == rhs) return true
+  if (cmp === 'ne' && lhs != rhs) return true
+  if (cmp === 'le' && lhs <= rhs) return true
+  if (cmp === 'ge' && lhs >= rhs) return true
+  if (cmp === 'lt' && lhs <  rhs) return true
+  if (cmp === 'gt' && lhs >  rhs) return true
+  
+  return false
+}
+
+function __assemble_textnode (chunks) {
+  return chunks.map(__get_value).join('').trim()
+}
+
+function __update_node (el, node) {
+  if (node._if && node._if.cmp && !__evaluate_condition(node._if)) {
+    el.hidden = true
+    return 
+  } else {
+    el.hidden = false
+  }
+  for (a in node.attributes) {
+    el[a] = __get_value(node.attributes[a])
+  }
+  for (let i = 0; i < node.textnodes.length; i++) {
+    const tn = node.textnodes[i]
+    el.childNodes[tn.index].textContent = __assemble_textnode(tn.chunks)
+  }
 }
 
 function $update () {
-  __adom_each_ref(function (node) {
-    console.log(node)
-  })
+  function walk (children, parentElement) {
+    children.forEach(function (node) {
+      if (node.type === 'push_props') {
+	__adom_state.push({ props: node.scope })
+      } else if (node.type === 'pop_props') {
+	__adom_state.pop()
+      } else {
+	const sel = '[data-adom-id="' + node.id + '"]'
+	if (node._each && node._each.iterator) {
+	  const current = parentElement.querySelectorAll(sel)
+	  const template = current[0]
+	  const iterator = node._each.iterator[0]
+	  const list = __get_value(node._each.list)
+  
+	  if (list.length === 0) {
+	    template.hidden = true
+	    for (let i = 1; i < current.length; i++) {
+	      current[i].parentNode.removeChild(current[i])
+	    }
+	    return
+	  } 
+	  
+	  if (list.length <= current.length) {
+	    list.forEach(function (item, i) {
+	      __adom_state.push({ [iterator]: item })
+	      __update_node(current[i], node)
+	      if (node.children.length) {
+		walk(node.children, current[i])
+	      }
+	      __adom_state.pop()
+	    })
+	  } else {
+	    current.forEach(function (el, i) {
+	      __adom_state.push({ [iterator]: list[i] })
+	      __update_node(el, node)
+	      if (node.children.length) {
+		walk(node.children, el)
+	      }
+	      __adom_state.pop() 
+	    })
+	  }
+	
+	  if (list.length < current.length) {
+	    for (let i = list.length; i < current.length; i++) {
+	      current[i].parentNode.removeChild(current[i]) 
+	    }
+	  } else if (list.length > current.length) {
+	    let frag = document.createDocumentFragment()
+	    for (let i = current.length; i < list.length; i++) {
+	      let el = template.cloneNode(true)
+	      __adom_state.push({ [iterator]: list[i] })
+	      __update_node(el, node)
+	      if (node.children.length) {
+		walk(node.children, el)
+	      }
+	      __adom_state.pop() 
+	      frag.appendChild(el) 
+	    }
+	    current[current.length - 1].parentNode.insertBefore(frag, current[current.length - 1].nextSibling);
+	  }
+	} else {
+	  const el = parentElement.querySelector(sel)
+	  __update_node(el, node)
+	  if (node.children.length) {
+	    walk(node.children, el)
+	  }
+	}
+      }
+    })
+  }
+  walk(__adom_refs, document)
 }
   function addItem () {
     $.items.push($select('#item').value)
